Schedule bounty stage changes based on periods i.e: `fundingPeriod`, `workPeriod`, and `judgingPeriod`

--- a/query-node/manifest.yml
+++ b/query-node/manifest.yml
@@ -668,4 +668,5 @@ mappings:
     - handler: loadGenesisData
       filter:
         height: "[0,0]" # will be executed only at genesis
+    - handler: launchScheduler
   postBlockHooks:
