--- a/query-node/manifest.yml
+++ b/query-node/manifest.yml
@@ -665,6 +665,8 @@ mappings:
       handler: bounty_BountyVetoed
     - event: bounty.BountyFunded
       handler: bounty_BountyFunded
+    - event: bounty.BountyMaxFundingReached
+      handler: bounty_BountyMaxFundingReached
   extrinsicHandlers:
     # infer defaults here
     #- extrinsic: Balances.Transfer
