--- a/query-node/manifest.yml
+++ b/query-node/manifest.yml
@@ -673,6 +673,8 @@ mappings:
       handler: bounty_BountyCreatorCherryWithdrawal
     - event: bounty.BountyRemoved
       handler: bounty_BountyRemoved
+    - event: bounty.WorkEntryAnnounced
+      handler: bounty_WorkEntryAnnounced
   extrinsicHandlers:
     # infer defaults here
     #- extrinsic: Balances.Transfer
