--- a/query-node/manifest.yml
+++ b/query-node/manifest.yml
@@ -677,6 +677,8 @@ mappings:
       handler: bounty_WorkEntryAnnounced
     - event: bounty.WorkEntryWithdrawn
       handler: bounty_WorkEntryWithdrawn
+    - event: bounty.WorkEntrySlashed
+      handler: bounty_WorkEntrySlashed
   extrinsicHandlers:
     # infer defaults here
     #- extrinsic: Balances.Transfer
